...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title_guideline">

        <TextView
            android:id="@+id/directions_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lineSpacingExtra="5dp"
            android:text="Lets Get Started!"
            android:textSize="16dp"
            app:layout_constraintBottom_toTopOf="@+id/directions_guideline"
...
